<resources>
    <string name="app_name">AlcChallengeOne</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="about">ABOUT ALC</string>
    <string name="profile">MY PROFILE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name">BILL WEKESA</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Kenya</string>
    <string name="email">Email: wekesabill@gmail.com</string>
    <string name="phone_number">Phone Number: +254715338188</string>
    <string name="slack_username">Slack Username: @wekesa</string>
    <string name="title_activity_alc">ALCActivity</string>
</resources>
