<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".ProfileActivity">

    <ImageView
            android:layout_width="113dp"
            android:layout_height="162dp" app:srcCompat="@drawable/profilepic"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:contentDescription="@string/name"/>

    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/name_text" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:fontFamily="serif" android:textSize="24sp" android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <View
            android:id="@+id/horizontal_line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#232323"
            app:layout_constraintTop_toBottomOf="@+id/name_text" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/track"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/track_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:padding="20dp" tools:layout_editor_absoluteY="254dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line"/>

    <TextView
            android:text="@string/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/country_text" app:layout_constraintStart_toStartOf="@+id/slackusername_text"
            app:layout_constraintEnd_toEndOf="@+id/slackusername_text" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:padding="20dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/track_text"
    />

    <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="506dp"
            android:id="@+id/email_text" app:layout_constraintStart_toStartOf="@+id/country_text"
            app:layout_constraintEnd_toEndOf="@+id/country_text" android:padding="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/country_text"/>

    <TextView
            android:text="@string/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/phone_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text" app:layout_constraintEnd_toEndOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@+id/email_text" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:padding="20dp"/>

    <TextView
            android:text="@string/slack_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="341dp"
            android:id="@+id/slackusername_text" app:layout_constraintStart_toStartOf="@+id/track_text"
            app:layout_constraintEnd_toEndOf="@+id/track_text" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:padding="20dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/phone_text"/>



</androidx.constraintlayout.widget.ConstraintLayout>