<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <TextView
            android:text="@string/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_text" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:padding="20dp"/>
    <Button
            android:text="@string/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_about" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintStart_toStartOf="@+id/welcome_text"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button_profile" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_about" app:layout_constraintEnd_toEndOf="@+id/button_about"
            app:layout_constraintStart_toStartOf="@+id/button_about"/>
</androidx.constraintlayout.widget.ConstraintLayout>